--- a/Azure_ML_Notebook.ipynb
+++ b/Azure_ML_Notebook.ipynb
@@ -1106,7 +1106,9 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "d866bd71",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2269,7 +2271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
